udagram-network.yml
Description: >
    Agoston Pajzs / Udacity Cloud DevOps
    Course 3 - Udagram Project
    This CloudFormation template file contains the Network elements

Parameters:

    EnvironmentName:
        Description: An environment name that will be prefixed to resource names
        Type: String

    VpcCIDR: 
        Description: Please enter the IP range (CIDR notation) for this VPC
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR: 
        Description: The IP range (CIDR notation) for this Subnet
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet2CIDR: 
        Description: The IP range (CIDR notation) for this Subnet
        Type: String
        Default: 10.0.1.0/16

    PrivateSubnet1CIDR: 
        Description: The IP range (CIDR notation) for this Subnet
        Type: String
        Default: 10.0.2.0/16

    PrivateSubnet2CIDR: 
        Description: The IP range (CIDR notation) for this Subnet
        Type: String
        Default: 10.0.3.0/16

Resources:
    UdgVPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock: !Ref VpcCIDR
            EnableDnsHostnames: true
            Tags: 
                - Key: Name 
                  Value: !Ref EnvironmentName
    UdgInternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value: !Ref EnvironmentName
            
    UdgInternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId: !Ref UdgInternetGateway
            VpcId: !Ref UdgVPC

    UdgPublicSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref UdgVPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet1CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)

    UdgPublicSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref UdgVPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PublicSubnet2CIDR
            MapPublicIpOnLaunch: true
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

    UdgPrivateSubnet1: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref UdgVPC
            AvailabilityZone: !Select [ 0, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet1CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)

    UdgPrivateSubnet2: 
        Type: AWS::EC2::Subnet
        Properties:
            VpcId: !Ref UdgVPC
            AvailabilityZone: !Select [ 1, !GetAZs '' ]
            CidrBlock: !Ref PrivateSubnet2CIDR
            MapPublicIpOnLaunch: false
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
    
    UdgNatGateway1EIP:
        Type: AWS::EC2::EIP
        DependsOn: UdgInternetGatewayAttachment
        Properties: 
            Domain: vpc

    UdgNatGateway2EIP:
        Type: AWS::EC2::EIP
        DependsOn: UdgInternetGatewayAttachment
        Properties:
            Domain: vpc

    UdgNatGateway1: 
        Type: AWS::EC2::NatGateway
        Properties: 
            AllocationId: !GetAtt UdgNatGateway1EIP.AllocationId
            SubnetId: !Ref UdgPublicSubnet1

    UdgNatGateway2: 
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId: !GetAtt UdgNatGateway2EIP.AllocationId
            SubnetId: !Ref UdgPublicSubnet2

    UdgPublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref UdgVPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Public Routes

    UdgDefaultPublicRoute: 
        Type: AWS::EC2::Route
        DependsOn: UdgInternetGatewayAttachment
        Properties: 
            RouteTableId: !Ref UdgPublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref UdgInternetGateway

    UdgPublicSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref UdgPublicRouteTable
            SubnetId: !Ref UdgPublicSubnet1

    UdgPublicSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref UdgPublicRouteTable
            SubnetId: !Ref UdgPublicSubnet2

    UdgPrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref UdgVPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ1)

    UdgDefaultPrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref UdgPrivateRouteTable1
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref UdgNatGateway1

    UdgPrivateSubnet1RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref UdgPrivateRouteTable1
            SubnetId: !Ref UdgPrivateSubnet1

    UdgPrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties: 
            VpcId: !Ref UdgVPC
            Tags: 
                - Key: Name 
                  Value: !Sub ${EnvironmentName} Private Routes (AZ2)

    UdgDefaultPrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            RouteTableId: !Ref UdgPrivateRouteTable2
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref UdgNatGateway2

    UdgPrivateSubnet2RouteTableAssociation:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            RouteTableId: !Ref UdgPrivateRouteTable2
            SubnetId: !Ref UdgPrivateSubnet2

Outputs: 

    VPC: 
        Description: A reference to the created VPC
        Value: !Ref UdgVPC
        Export:
          Name: !Sub ${EnvironmentName}-VPCID

    VPCPublicRouteTable:
        Description: Public Routing
        Value: !Ref UdgPublicRouteTable
        Export:
          Name: !Sub ${EnvironmentName}-PUB-RT

    VPCPrivateRouteTable1:
        Description: Private Routing AZ1
        Value: !Ref UdgPrivateRouteTable1
        Export:
          Name: !Sub ${EnvironmentName}-PRI1-RT

    VPCPrivateRouteTable2:
        Description: Private Routing AZ2
        Value: !Ref UdgPrivateRouteTable2
        Export:
          Name: !Sub ${EnvironmentName}-PRI2-RT

    PublicSubnets:
        Description: A list of the public subnets
        Value: !Join [ ",", [ !Ref UdgPublicSubnet1, !Ref UdgPublicSubnet2 ]]
        Export:
          Name: !Sub ${EnvironmentName}-PUB-NETS

    PrivateSubnets:
        Description: A list of the private subnets
        Value: !Join [ ",", [ !Ref UdgPrivateSubnet1, !Ref UdgPrivateSubnet2 ]]
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-NETS

    PublicSubnet1:
        Description: A reference to the public subnet in the 1st Availability Zone
        Value: !Ref UdgPublicSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PUB1-SN

    PublicSubnet2: 
        Description: A reference to the public subnet in the 2nd Availability Zone
        Value: !Ref UdgPublicSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PUB2-SN

    PrivateSubnet1:
        Description: A reference to the private subnet in the 1st Availability Zone
        Value: !Ref UdgPrivateSubnet1
        Export:
          Name: !Sub ${EnvironmentName}-PRI1-SN

    PrivateSubnet2: 
        Description: A reference to the private subnet in the 2nd Availability Zone
        Value: !Ref UdgPrivateSubnet2
        Export:
          Name: !Sub ${EnvironmentName}-PRI2-SN
